modify send telemetry

--- a/nodejs/config.json
+++ b/nodejs/config.json
@@ -1,9 +1,17 @@
 {
-    "deviceConnectionString": "HostName=saas-iothub-fe1c12df-3695-4b1d-9e12-22012e6f308c.azure-devices.net;DeviceId=1yi2hhn;SharedAccessKey=Mz08GuWv0n5Ec8d/lT2w4QtuiVOpls/FNFKhX89rMrQ=",
-    "deviceId": "Raspberry Pi Node",
+    "deviceConnectionString": "HostName=s1iotremotemonitoringc9f9c.azure-devices.net;DeviceId=firealam-02.Real;SharedAccessKey=bxCcsNGFZeL86S4CGi87mmf/meBwND0365G1w4cRiSs=",
+    "deviceId": "firealam-02.Real",
     "interval":"2000", 
     "serialNumber": "123-123",
     "manufacturer": "Kevin Co",
+    "deviceType": "FireAlarm",
+    "deviceFirmware": "1.0.0",
+    "deviceLocation": "서울 종로구 종로1길 50 KTT A동 12층",
+    "deviceFirmwareUpdateStatus": "",
+    "deviceLatitude": 37.5746492,
+    "deviceLongitude": 126.9783334,
+    "deviceOnline": true,
+    "alertLEDOn": false,
     "LEDPin": 5, 
     "temperatureAlert": 30,
     "targetTemperature": 25,
